# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-19 20:01:00 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-43

    Summary:
      cms, fixing external edit, pass a dummy meta-type
    Revision:
      itools--main--0.12--patch-43


    modified files:
     Changelog cms/File.py


2005-11-19 19:20:48 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-42

    Summary:
      resources.zodb, implement locking (only in files for now)
    Revision:
      itools--main--0.12--patch-42


    modified files:
     Changelog cms/Handler.py resources/zodb.py


2005-11-19 18:00:25 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-41

    Summary:
      scripts.icms, now the port can be specified in the config file
    Revision:
      itools--main--0.12--patch-41


    modified files:
     Changelog scripts/icms.py


2005-11-19 17:46:47 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-40

    Summary:
      cms, minor coding style fix (80 columns)
    Revision:
      itools--main--0.12--patch-40


    modified files:
     Changelog cms/Folder.py


2005-11-19 17:37:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-39

    Summary:
      csv, fix "to_str" when there is not an schema
    Revision:
      itools--main--0.12--patch-39

    By default (when there is not an schema) we deserialize columns as
    unicode values. Then we must encode the values on serialization.

    modified files:
     Changelog csv/itools_csv.py


2005-11-19 17:25:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-38

    Summary:
      web, forgot to log some errors; cms, fix "internal_server_error"
    Revision:
      itools--main--0.12--patch-38


    modified files:
     Changelog cms/Root.py web/server.py


2005-11-19 17:10:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-37

    Summary:
      scripts.icms, index and archive everything on initialization
    Revision:
      itools--main--0.12--patch-37

