@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-11-19 20:03:09 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-44
+
+    Summary:
+      web.request, add support for any request body
+    Revision:
+      itools--main--0.12--patch-44
+
+
+    modified files:
+     Changelog web/request.py
+
+
 2005-11-19 20:01:00 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-43
 
     Summary:
